unpackaged/main/default/objects/Account/fields/what_they_ve_tried_before__c.field-meta.xml
<CustomField>
    <fullName>what_they_ve_tried_before__c</fullName>
    <description>Case Number: 00088509</description>
    <label>What they’ve tried before:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEO</fullName>
            </value>
            <value>
                <fullName>Blogs</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Paid Ads</fullName>
            </value>
            <value>
                <fullName>GMB</fullName>
            </value>
            <value>
                <fullName>Zillow</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>