unpackaged/main/default/objects/Account/fields/Year_Est__c.field-meta.xml
<CustomField>
    <fullName>Year_Est__c</fullName>
    <label>Year Est.</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>