unpackaged/main/default/objects/Account/fields/Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Business__c</fullName>
    <description>Case Number: 00088509</description>
    <label>Years in Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1</fullName>
            </value>
            <value>
                <fullName>1-3</fullName>
            </value>
            <value>
                <fullName>3+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>