unpackaged/main/default/objects/Account/fields/Yoy_growth_score__c.field-meta.xml
<CustomField>
    <fullName>Yoy_growth_score__c</fullName>
    <label>(MLS) Yoy growth score</label>
    <length>100</length>
    <type>Text</type>
</CustomField>