unpackaged/main/default/objects/Account/listViews/Copy_of_Alyssa_s_Account_View.listView-meta.xml
<ListView>
    <fullName>Copy_of_Alyssa_s_Account_View</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Manager__c</field>
        <operation>equals</operation>
        <value>amanda webb</value>
    </filters>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>notEqual</operation>
        <value>amanda</value>
    </filters>
    <label>Account Owner Update</label>
</ListView>