unpackaged/main/default/objects/Account/listViews/Heidi_s_Accounts.listView-meta.xml
<ListView>
    <fullName>Heidi_s_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Implementation_Manager__c</field>
        <operation>equals</operation>
        <value>Heidi Martinez</value>
    </filters>
    <label>Heidi&#39;s Accounts</label>
</ListView>