unpackaged/main/default/objects/Account/listViews/Jan_2025_MM_Key_Prospects_Briana.listView-meta.xml
<ListView>
    <fullName>Jan_2025_MM_Key_Prospects_Briana</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Jan 2025 - MM Key Prospects - Briana</label>
</ListView>