unpackaged/main/default/objects/Account/listViews/Keller_Williams_Child_Accounts.listView-meta.xml
<ListView>
    <fullName>Keller_Williams_Child_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS2_STREET</columns>
    <columns>PARENT_NAME</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>contains</operation>
        <value>Keller Williams</value>
    </filters>
    <label>Keller Williams Child Accounts</label>
</ListView>