unpackaged/main/default/objects/Account/listViews/New_clients_30_Days_AM.listView-meta.xml
<ListView>
    <fullName>New_clients_30_Days_AM</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>Tier_Plan__c</columns>
    <columns>Subscription_Start_Date__c</columns>
    <columns>Account_Manager__c</columns>
    <columns>Implementation_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>ACCOUNT.URL</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACCOUNT.URL</field>
        <operation>notEqual</operation>
        <value>n/a</value>
    </filters>
    <filters>
        <field>ACCOUNT.URL</field>
        <operation>notEqual</operation>
        <value>NA</value>
    </filters>
    <filters>
        <field>ACCOUNT.URL</field>
        <operation>notEqual</operation>
        <value>na</value>
    </filters>
    <filters>
        <field>ACCOUNT.URL</field>
        <operation>notEqual</operation>
        <value>N/A</value>
    </filters>
    <label>New clients &lt;30 Days</label>
</ListView>