unpackaged/main/default/objects/Account/listViews/OM_Audit_Manager_View.listView-meta.xml
<ListView>
    <fullName>OM_Audit_Manager_View</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>LAST_EMAIL_SENT_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>OM Audit Manager View</label>
</ListView>