unpackaged/main/default/objects/Account/listViews/Partners.listView-meta.xml
<ListView>
    <fullName>Partners</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Prospecting__c</columns>
    <columns>Year_Est__c</columns>
    <columns>Location__c</columns>
    <columns>Exclusivity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Brokerage Partner,Industry Partner,Affiliate Partner</value>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>equals</operation>
    </filters>
    <label>Partners</label>
</ListView>