unpackaged/main/default/objects/Account/listViews/Rachel_s_Accounts.listView-meta.xml
<ListView>
    <fullName>Rachel_s_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Tier_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Implementation_Manager__c</field>
        <operation>equals</operation>
        <value>Rachel Manu</value>
    </filters>
    <label>Rachel&#39;s Accounts</label>
</ListView>